clusters/lab/gitops/platform/gateway/private-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private-https
  namespace: gateway-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.5.101
  listeners:
    - name: http-redirect
      hostname: "*.home.rboiko.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        namespaces:
          from: Same
    - name: http-root-redirect
      hostname: home.rboiko.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        namespaces:
          from: Same
    - name: https-wildcard
      hostname: "*.home.rboiko.com"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: home-lab-gateway-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              home-lab.rboiko.com/gateway-scope: private
    - name: https-root
      hostname: home.rboiko.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: home-lab-gateway-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              home-lab.rboiko.com/gateway-scope: private
