clusters/lab/gitops/platform/gateway/http-to-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: public-http-to-https-redirect
  namespace: gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-https
      sectionName: http-redirect
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-https
      sectionName: http-root-redirect
  hostnames:
    - home.rboiko.com
    - "*.home.rboiko.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: private-http-to-https-redirect
  namespace: gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-https
      sectionName: http-redirect
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-https
      sectionName: http-root-redirect
  hostnames:
    - home.rboiko.com
    - "*.home.rboiko.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
